# aoc

./: .gitignore  README.md  pyproject.toml
aoc/: template.py  util.py
aoc/2016/: 1.py
aoc/2020/: 1.py  10.py  11.py  12.py  16.py  18.py  19.py  2.py  3.py  5.py  6.py  7.py  8.py  9.py
aoc/2023/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  5-ranges.py  5.py  6.py  7.py  8.py  9.py
aoc/2024/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
