[project]
name = "aoc"  # Required
version = "1.0.0"  # Required
requires-python = ">=3.7"
dependencies = [
  "advent-of-code-data",
  "numpy",
  "networkx",
]

[project.optional-dependencies]
dev = ["ruff"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
disable = """missing-module-docstring,
  missing-function-docstring,
  wrong-import-position,
  unused-import,
  wildcard-import,
  missing-class-docstring,
  unused-wildcard-import,
  invalid-name,
  broad-exception-raised,
"""

[tool.ruff]
target-version = "py312"
